# ksec-experiments

./: Makefile  hello.c
fprotect/: LICENSE  Makefile  fprotect.c  hashtab.h  main.py  queue.h  str.h
gdt/: hello.c
idt/: hello.c
ksec/: .gitignore  CMakeLists.txt  LICENSE  Makefile  ksec.c
ksec/dotgit-backup/: config  index  packed-refs
ksec/dotgit-backup/logs/refs/heads/: master
ksec/dotgit-backup/objects/pack/: pack-f289a090ce14c482f15b307aef21a9fdbd7584ad.idx  pack-f289a090ce14c482f15b307aef21a9fdbd7584ad.pack
ksec/dotgit-backup/refs/heads/: master
ksec/userspace/: Cargo.toml
ksec/userspace/src/: main.rs
syscall/: hello.c
wlist/: Makefile  wlist.c
